// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failed 1`] = `
.c0 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-left: 8px;
}

.c7:active {
  opacity: 0.56;
}

.c7:hover,
.c7:focus {
  background: none;
  text-decoration: underline;
}

.c7:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #651FFF;
}

.c10:active {
  background: #354AA4;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #2C3A73;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c6 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: #f50057;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin: 0px;
  margin-top: 4px;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 32px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c8 {
  color: #03a9f4;
  font-weight: normal;
  padding-left: 0;
  font-size: inherit;
  min-height: auto;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  margin-top: 8px;
  display: flex;
  align-items: center;
}

.c5 .icon {
  margin-right: 8px;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  height: auto;
  border-radius: 8px;
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  border: 2px solid #f50057;
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Configure Resource
  </div>
  <div
    class="c2"
  >
    Install and configure the Teleport SSH Service.
    <br />
    Run the following command on the server you want to add.
  </div>
  <div
    class="c3"
    height="auto"
  >
    <div
      class="c4"
    >
      Command
    </div>
    <div
      class="c5"
    >
      <span
        class="c6 icon icon-warning "
        color="danger"
      />
      Encountered Error: 
      some error message
    </div>
    <button
      class="c7 c8"
      kind="text"
    >
      Refetch a command
    </button>
  </div>
  <div
    class="c9"
  >
    
    <button
      class="c10"
      disabled=""
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c11"
      href="/web"
      kind="secondary"
      mt="3"
      theme="[object Object]"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`polling error state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c16 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c8:active {
  opacity: 0.56;
}

.c8:hover,
.c8:focus {
  background: #651FFF;
}

.c8:active {
  background: #354AA4;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-left: 4px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: none;
  text-decoration: underline;
}

.c11:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #651FFF;
}

.c17:active {
  background: #354AA4;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c18:active {
  opacity: 0.56;
}

.c18:hover,
.c18:focus {
  background: #2C3A73;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: #f50057;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin: 0px;
  margin-top: 4px;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 32px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
  margin-top: 24px;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 4px;
  margin-top: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c12 {
  color: #03a9f4;
  font-weight: normal;
  padding-left: 0;
  font-size: inherit;
  min-height: auto;
}

.c15 {
  padding: 2px 5px;
  border-radius: 6px;
  background-color: rgb(255 255 255 / 17%);
  color: inherit;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  display: flex;
  align-items: center;
}

.c9 .icon {
  margin-right: 8px;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  height: auto;
  border-radius: 8px;
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  border: 2px solid #f50057;
}

.c14 {
  margin-top: 6px;
  margin-bottom: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Configure Resource
  </div>
  <div
    class="c2"
  >
    Install and configure the Teleport SSH Service.
    <br />
    Run the following command on the server you want to add.
  </div>
  <div
    class="c3"
    height="auto"
  >
    <div
      class="c4"
    >
      Command
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
        style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
      >
        <div
          class="c7"
          style="user-select: none;"
        >
          $
        </div>
        <div>
          sudo bash -c "$(curl -fsSL http://localhost/scripts/some-join-token-hash/install-node.sh)"
        </div>
      </div>
      <button
        class="c8"
        kind="primary"
        style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
      >
        Copy
      </button>
    </div>
    <div
      class="c0"
    >
      <div
        class="c9"
      >
        <span
          class="c10 icon icon-warning "
          color="danger"
        />
        We could not detect the server you were trying to add
         
        <button
          class="c11 c12"
          kind="text"
        >
          Generate a new command
        </button>
      </div>
      <div
        class="c13"
      >
        Possible reasons
      </div>
      <ul
        class="c14"
      >
        <li>
          The command was not run on the server you were trying to add
        </li>
        <li>
          The Teleport SSH Service could not join this Teleport cluster. Check the logs for errors by running 
          <br />
          <mark
            class="c15"
          >
            journalctl status teleport
          </mark>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="c16"
  >
    
    <button
      class="c17"
      disabled=""
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c18"
      href="/web"
      kind="secondary"
      mt="3"
      theme="[object Object]"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`polling state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c11 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c8:active {
  opacity: 0.56;
}

.c8:hover,
.c8:focus {
  background: #651FFF;
}

.c8:active {
  background: #354AA4;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #651FFF;
}

.c12:active {
  background: #354AA4;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #2C3A73;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 18px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin: 0px;
  margin-top: 4px;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 32px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 4px;
  margin-top: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  height: auto;
  border-radius: 8px;
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  border: 2px solid #2F3659;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  display: flex;
  align-items: center;
  white-space: pre;
}

.c9 .icon {
  margin-right: 8px;
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Configure Resource
  </div>
  <div
    class="c2"
  >
    Install and configure the Teleport SSH Service.
    <br />
    Run the following command on the server you want to add.
  </div>
  <div
    class="c3"
    height="auto"
  >
    <div
      class="c4"
    >
      Command
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
        style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
      >
        <div
          class="c7"
          style="user-select: none;"
        >
          $
        </div>
        <div>
          sudo bash -c "$(curl -fsSL http://localhost/scripts/some-join-token-hash/install-node.sh)"
        </div>
      </div>
      <button
        class="c8"
        kind="primary"
        style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
      >
        Copy
      </button>
    </div>
    <div
      class="c9"
    >
      <span
        class="c10 icon icon-restore "
        color="light"
        font-size="4"
      />
      Waiting for Teleport SSH Service   |   05:00 minutes
    </div>
  </div>
  <div
    class="c11"
  >
    
    <button
      class="c12"
      disabled=""
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c13"
      href="/web"
      kind="secondary"
      mt="3"
      theme="[object Object]"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`polling success state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c11 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c8:active {
  opacity: 0.56;
}

.c8:hover,
.c8:focus {
  background: #651FFF;
}

.c8:active {
  background: #354AA4;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #651FFF;
}

.c12:active {
  background: #354AA4;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #2C3A73;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: #00bfa5;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin: 0px;
  margin-top: 4px;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 32px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 4px;
  margin-top: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  display: flex;
  align-items: center;
}

.c9 .icon {
  margin-right: 8px;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  height: auto;
  border-radius: 8px;
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  border: 2px solid #00bfa5;
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Configure Resource
  </div>
  <div
    class="c2"
  >
    Install and configure the Teleport SSH Service.
    <br />
    Run the following command on the server you want to add.
  </div>
  <div
    class="c3"
    height="auto"
  >
    <div
      class="c4"
    >
      Command
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
        style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
      >
        <div
          class="c7"
          style="user-select: none;"
        >
          $
        </div>
        <div>
          sudo bash -c "$(curl -fsSL http://localhost/scripts/some-join-token-hash/install-node.sh)"
        </div>
      </div>
      <button
        class="c8"
        kind="primary"
        style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
      >
        Copy
      </button>
    </div>
    <div
      class="c9"
    >
      <span
        class="c10 icon icon-checkmark-circle "
        color="success"
      />
      The server successfully joined this Teleport cluster
    </div>
  </div>
  <div
    class="c11"
  >
    
    <button
      class="c12"
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c13"
      href="/web"
      kind="secondary"
      mt="3"
      theme="[object Object]"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;
